Add user_id for tasks
