# internal/models/userOrm.go
@@ -1,0 +1,8 @@
+package models
+
+import "gorm.io/gorm"
+
+type User struct {
+	gorm.Model
+	Tasks    []Task `json:"tasks"`
+}
