# openapi/openapi.yaml
@@ -66,8 +66,124 @@ paths:
       responses:
         '204':
           description: User successfully deleted
+  /tasks:
+    get:
+      summary: Get all tasks
+      tags:
+        - tasks
+      responses:
+        '200':
+          description: A list of tasks
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
+    post:
+      summary: Create a new task
+      tags:
+        - tasks
+      requestBody:
+        description: The task to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Task'
+      responses:
+        '201':
+          description: The created task
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Task'
+  /tasks/{id}:
+    patch:
+      summary: Update a task by ID
+      tags:
+        - tasks
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      requestBody:
+        description: Fields to update in the task
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Task'
+      responses:
+        '200':
+          description: The updated task
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Task'
+    delete:
+      summary: Delete a task by ID
+      tags:
+        - tasks
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '204':
+          description: Task successfully deleted
+  /tasks/user/{user_id}:
+    get:
+      summary: Get tasks for specific user
+      tags:
+        - tasks
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+          description: User ID
+      responses:
+        '200':
+          description: List of tasks for the specified user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
 components:
   schemas:
+    Task:
+      type: object
+      required:
+        - task
+        - user_id
+      properties:
+        id:
+          type: integer
+          format: uint
+        task:
+          type: string
+        is_done:
+          type: boolean
+        user_id:
+          type: integer
+          format: uint
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
     UserCreate:
       type: object
       required:
@@ -80,7 +196,6 @@ components:
         password:
           type: string
           format: password
-    
     UserUpdate:
       type: object
       properties:
@@ -90,7 +205,6 @@ components:
         password:
           type: string
           format: password
-    
     User:
       type: object
       properties:
